--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
         font-style: normal;
         font-size: medium;
     margin: 0px 10% 0px 10%;
-    line-height: 1.5;
+    line-height: 1.6;
     letter-spacing: 1px;
 
 }
@@ -26,7 +26,7 @@ section{
     padding-top: 1px;
     padding-bottom: 1px;
     border-top: 1px solid #4e2c1f;
-    border-bottom: 1px solid #4e2c1f
+    border-bottom: 1px solid #4e2c1f;
 }
 h2{
     color: #924506;
@@ -37,6 +37,7 @@ h2{
 }          
 .osobni{
     background-color: #b7cbe2;
+    font-size: larger;
     color: #032b5b;
     display: flex;  
     justify-content: space-between; /* Rozprostře prvky na kraje */
@@ -47,11 +48,17 @@ h2{
 }
 .osobni img{
     border-radius: 50%;
-    width: 200px;
+    width:210px;
+    padding: 0%;
 }
 table{
     width: auto;
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 35px 5px;
+    padding-right: 0%;
+}
+ul{
+    list-style-type: square;
 }
 
 a{
@@ -65,5 +72,6 @@ a{
 
 footer{
     background-color: #b7cbe2;
-    padding: 10px 200px 10px 200px
+    padding: 10px 200px 10px 200px;
+    font-style: italic;
 }
